ccargo-features = ["open-namespaces"]
[package]
name = "kourain_core"
version = "1.0.1"
edition = "2024"
authors = ["kourain <maiquyen16503@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "kourain extensions helper"
readme = "README.md"
homepage = "https://github.com/kourain/kourain_core"
repository = "https://github.com/kourain/kourain_core"
keywords = ["kourain"]
categories = ["command-line-utilities"]
exclude = [
    "tests/*",
]

[dependencies]
regex = "1"
